test: 변경된 메서드 스펙에 따라 테스트 코드 수정